outputs/workspace_output_1773872641_5900.txt
  File "/workspace/fix_billing.py", line 10
    new_pattern = '<div class=\\"supplier-item\\" onclick=\\"viewSupplierDetails(\\'${supplier.id}\\')\\" style=\\"cursor: pointer;\\" title=\\"Click to view details\\">'
                                                                                    ^
SyntaxError: invalid syntax
